# bSSFP_sim

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  WORKFLOW.md  chapter1_codex_prompt.md  chapter1_commit_plan.md  chapter1_overview.md  chapter1_review_checklist.md  chapter3_codex_prompt.md  chapter3_equation_spec.md  fastse_vfa_fse_comparison_spec_v1.md  pyproject.toml
docs/: generic_viewer_screen_spec_v0.md  hdf5_schema.md
docs/chapters/: chapter1.md  chapter2.md  chapter3.md  chapter6.md  chapter7.md
examples/configs/: chapter4_default.yaml  chapter5_default.yaml  comparison_bssfp_minimal.yaml  comparison_fastse_minimal.yaml  comparison_fastse_vfa_cross_family_minimal.yaml  comparison_vfa_fse_manual_minimal.yaml  minimal.yaml  test_config.yaml
scripts/: compute_chapter3_demo.py
src/bssfpviz/: __init__.py
src/bssfpviz/app/: main.py
src/bssfpviz/core/: __init__.py  affine.py  bloch.py  propagators.py  reference.py  rf.py  segments.py  steady_state.py
src/bssfpviz/gui/: __init__.py  adapters.py  animation_view_model.py  bookmark_panel.py  compare_worker.py  (+25 more)
tests/: conftest.py
tests/integration/: test_app_boot.py  test_bssfp_family_adapter.py  test_chapter3_pipeline.py  test_compare_cli.py  test_comparison_hdf5.py  test_compute_cli.py  test_generic_preview_window.py  test_hdf5_store.py  test_main_window.py  test_main_window_compare_mode.py  test_main_window_playback.py  test_preview_cli.py
tests/unit/: test_bloch_matrices.py  test_config.py  test_dataset_model.py  test_imports.py  test_profiles.py  test_propagators.py  test_reference.py
(+46 files in other folders)
