[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bloch-ssfp-visualizer"
version = "0.7.0"
description = "Chapter-based local GUI skeleton for observing Bloch / bSSFP behaviour."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Codex" }]
dependencies = [
  "PySide6>=6.7",
  "pyvista>=0.43",
  "pyvistaqt>=0.11",
  "pyqtgraph>=0.13",
  "numpy>=1.26",
  "scipy>=1.13",
  "PyYAML>=6.0",
  "h5py>=3.11",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "mypy>=1.10",
  "pre-commit>=3.7",
]

[project.scripts]
bssfpviz = "bssfpviz.app.main:main"
bssfpviz-compute = "bssfpviz.workflows.compute_cli:main"
bssfpviz-compare = "bssfpviz.workflows.compare_cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
packages = ["bssfpviz"]
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
